# SDL_glue

./: CMakeLists.txt  COPYING  Doxyfile  README
include/: SDLG.h  SDLG_events.h  SDLG_keyboard.h  SDLG_stdinc.h  SDLG_video.h
src/: CMakeLists.txt  SDLG_events.c  SDLG_keyboard.c  SDLG_stdinc.c  SDLG_video.c
